# camera-streaming

./: .gitignore  Cargo.toml  Readme.md  config.yaml  env.sh  ip.json
examples/: exam.rs  rabbitmq_client.rs
src/: config.rs  constant.rs  error.rs  lib.rs  parse.rs  rabbitmq.rs  task.rs
src/parse/: audio_parse.rs  video_parse.rs
src/task/: lib.rs  video_task.rs  web_server_task.rs
