[package]
name = "camera-streaming"
version = "0.1.0"
edition = "2021"

[dependencies]
opencv = { version = "0.93.5", features = ["clang-runtime"] }

thiserror = "2"
tokio = {version = "1.41.0", features = ["full"]}
log = "0.4.22"
env_logger = "0.11.5"
serde = { version = "1.0.213", features = ["derive"] }
serde_yaml = "0.9.34"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
async-channel = "2.3.1"
serde_json = "1.0.132"
http_parse = "2.0.1"
async-trait= "0.1"

[[bin]]
name="server"
path="bin/server.rs"

[[bin]]
name="client"
path = "bin/client.rs"
