[package]
name = "camera-streaming"
version = "0.1.0"
edition = "2021"

[dependencies]
opencv = { version = "0.93.5", features = ["clang-runtime"] }

thiserror = "2"
tokio = {version = "1.41.0", features = ["full"]}
serde = { version = "1.0.213", features = ["derive"] }
serde_yaml = "0.9.34"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
async-channel = "2.3.1"
serde_json = "1.0.132"
http_parse = "2.0.1"
async-trait= "0.1"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
cpal = "0.15.3"
log = "0.4.22"

[[bin]]
name="server"
path="bin/server.rs"

[[bin]]
name="client"
path = "bin/client.rs"

[profile.release]
debug = true
